# pydantic-ai-demo

./: .gitignore  00_prep.ipynb  01_simple_chat_completion.ipynb  02_structured_output.ipynb  03_summarization.ipynb  03_tool_usage.ipynb  04_job_agent.ipynb  04_tool_usage.ipynb  05_job_agent.ipynb  GEORGE_WASHINGTON.md  GEORGE_WASHINGTON_RESUME.md  GEORGE_WASHINGTON_SHORT.md  README.md  main.py  pyproject.toml
