[project]
name = "pydantic-ai-demo"
version = "0.1.0"
description = "Demo files about Pydantic AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "logfire>=4.14.2",
    "mermaid-py>=0.8.0",
    "ollama>=0.6.0",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.9.1",
    "pydantic-ai-slim[mcp,outlines-mlxlm,tavily]>=1.9.1",
    "pydantic-yaml>=1.6.0",
    "python-dotenv>=1.2.1",
    "rich[jupyter]>=14.2.0",
    "ruff>=0.14.3",
    "tavily-python>=0.7.12",
]


